--- a/activiti-spring-security-policies/src/test/resources/propstest.properties
+++ b/activiti-spring-security-policies/src/test/resources/propstest.properties
@@ -1,7 +1,7 @@
-activiti.cloud.security.group.finance.runtime-bundle.policy.read=SimpleProcess1,SimpleProcess2
-activiti.cloud.security.user.jeff.runtime-bundle.policy.write=SimpleProcess
-activiti.cloud.security.user.user.fredslinehasanerror.runtime-bundle.policy.=SimpleProcess
-activiti.cloud.security.user.user.jimhasnothing.runtime-bundle.policy.read=
-activiti.cloud.security.user.steve.different-runtime-bundle.policy.write=SimpleProcess
-activiti.cloud.security.user.jimbob.runtime-bundle.policy.write=*
+activiti.security.policies.group.finance.runtime-bundle.policy.read=SimpleProcess1,SimpleProcess2
+activiti.security.policies.user.jeff.runtime-bundle.policy.write=SimpleProcess
+activiti.security.policies.user.user.fredslinehasanerror.runtime-bundle.policy.=SimpleProcess
+activiti.security.policies.user.user.jimhasnothing.runtime-bundle.policy.read=
+activiti.security.policies.user.steve.different-runtime-bundle.policy.write=SimpleProcess
+activiti.security.policies.user.jimbob.runtime-bundle.policy.write=*
 activiti.cloud.security.group.accounts.runtime-bundle.policy.read=*
