--- a/activiti-spring-security-policies/src/test/resources/propstest.properties
+++ b/activiti-spring-security-policies/src/test/resources/propstest.properties
@@ -1,7 +1,20 @@
-activiti.security.policies.group.finance.runtime-bundle.policy.read=SimpleProcess1,SimpleProcess2
-activiti.security.policies.user.jeff.runtime-bundle.policy.write=SimpleProcess
-activiti.security.policies.user.user.fredslinehasanerror.runtime-bundle.policy.=SimpleProcess
-activiti.security.policies.user.user.jimhasnothing.runtime-bundle.policy.read=
-activiti.security.policies.user.steve.different-runtime-bundle.policy.write=SimpleProcess
-activiti.security.policies.user.jimbob.runtime-bundle.policy.write=*
-activiti.cloud.security.group.accounts.runtime-bundle.policy.read=*
+activiti.security.policies[0].name=My Policy
+activiti.security.policies[0].groups=developers, activitiTeam
+activiti.security.policies[0].users=salaboy,ryan, elias
+activiti.security.policies[0].access=WRITE
+activiti.security.policies[0].serviceName=runtime-bundle
+activiti.security.policies[0].keys=SampleProcess1, SampleProcess2
+
+activiti.security.policies[1].name=Other Policy
+activiti.security.policies[1].groups=finance, doctor
+activiti.security.policies[1].users=garth
+activiti.security.policies[1].access=READ
+activiti.security.policies[1].serviceName=application
+activiti.security.policies[1].keys=SampleProcess2, SampleProcess3
+
+activiti.security.policies[2].name=Policy with Wildcard
+activiti.security.policies[2].groups=developers
+activiti.security.policies[2].users=salaboy
+activiti.security.policies[2].access=WRITE
+activiti.security.policies[2].serviceName=default
+activiti.security.policies[2].keys=*
