--- a/activiti-spring-security-policies/src/test/resources/propstest.properties
+++ b/activiti-spring-security-policies/src/test/resources/propstest.properties
@@ -1,3 +1,4 @@
+spring.application.name=myApp
 activiti.security.policies[0].name=My Policy
 activiti.security.policies[0].groups=developers, activitiTeam
 activiti.security.policies[0].users=salaboy,ryan, elias
