--- a/activiti-engine/pom.xml
+++ b/activiti-engine/pom.xml
@@ -70,6 +70,7 @@
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
