--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
           <optimize>true</optimize>
         </configuration>
       </plugin>
+    
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>2.8.2</version></plugin>
     </plugins>
 
   </build>
