--- a/activiti-dependencies/pom.xml
+++ b/activiti-dependencies/pom.xml
@@ -15,27 +15,24 @@
       <!-- Activiti Modules for managed dependencies -->
       <dependency>
         <groupId>org.activiti</groupId>
-        <artifactId>activiti-api</artifactId>
-        <version>${activiti.version}</version>
+        <artifactId>activiti-api-dependencies</artifactId>
+        <version>${activiti-api.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>org.activiti</groupId>
-        <artifactId>activiti-common-model-api</artifactId>
+        <artifactId>activiti-api-impl</artifactId>
         <version>${activiti.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.activiti</groupId>
-        <artifactId>activiti-common-model-api-impl</artifactId>
+        <groupId>org.activiti.api</groupId>
+        <artifactId>activiti-api-model-shared-impl</artifactId>
         <version>${activiti.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.activiti</groupId>
-        <artifactId>activiti-common-runtime-api</artifactId>
-        <version>${activiti.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.activiti</groupId>
-        <artifactId>activiti-common-runtime-api-impl</artifactId>
+        <groupId>org.activiti.api</groupId>
+        <artifactId>activiti-api-runtime-shared-impl</artifactId>
         <version>${activiti.version}</version>
       </dependency>
       <dependency>
@@ -44,73 +41,23 @@
         <version>${activiti.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.activiti</groupId>
-        <artifactId>activiti-process-model-api</artifactId>
+        <groupId>org.activiti.api</groupId>
+        <artifactId>activiti-api-process-model-impl</artifactId>
         <version>${activiti.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.activiti</groupId>
-        <artifactId>activiti-process-model-api-impl</artifactId>
+        <groupId>org.activiti.api</groupId>
+        <artifactId>activiti-api-process-runtime-impl</artifactId>
         <version>${activiti.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.activiti</groupId>
-        <artifactId>activiti-process-runtime-api</artifactId>
+        <groupId>org.activiti.api</groupId>
+        <artifactId>activiti-api-task-model-impl</artifactId>
         <version>${activiti.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.activiti</groupId>
-        <artifactId>activiti-process-runtime-api-impl</artifactId>
-        <version>${activiti.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.activiti</groupId>
-        <artifactId>activiti-task-model-api</artifactId>
-        <version>${activiti.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.activiti</groupId>
-        <artifactId>activiti-task-model-api-impl</artifactId>
-        <version>${activiti.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.activiti</groupId>
-        <artifactId>activiti-task-runtime-api</artifactId>
-        <version>${activiti.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.activiti</groupId>
-        <artifactId>activiti-task-runtime-api-impl</artifactId>
-        <version>${activiti.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.activiti</groupId>
-        <artifactId>activiti-cloud-common-model-api</artifactId>
-        <version>${activiti.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.activiti</groupId>
-        <artifactId>activiti-cloud-common-model-api-impl</artifactId>
-        <version>${activiti.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.activiti</groupId>
-        <artifactId>activiti-cloud-process-model-api</artifactId>
-        <version>${activiti.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.activiti</groupId>
-        <artifactId>activiti-cloud-process-model-api-impl</artifactId>
-        <version>${activiti.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.activiti</groupId>
-        <artifactId>activiti-cloud-task-model-api</artifactId>
-        <version>${activiti.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.activiti</groupId>
-        <artifactId>activiti-cloud-task-model-api-impl</artifactId>
+        <groupId>org.activiti.api</groupId>
+        <artifactId>activiti-api-task-runtime-impl</artifactId>
         <version>${activiti.version}</version>
       </dependency>
       <dependency>
