Add alfresco snapshot repository

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,17 @@
     <module>activiti-api-task-runtime</module>
   </modules>
 
+  <repositories>
+    <repository>
+      <id>activiti-snapshots</id>
+      <name>Activiti Snapshots</name>
+      <url>https://artifacts.alfresco.com/nexus/content/repositories/activiti-snapshots/</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+    </repository>
+  </repositories>
+
   <dependencyManagement>
     <dependencies>
       <dependency>
