--- a/activiti-api-impl/activiti-api-task-model-impl/pom.xml
+++ b/activiti-api-impl/activiti-api-task-model-impl/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.activiti.api</groupId>
+    <groupId>org.activiti</groupId>
     <artifactId>activiti-api-impl</artifactId>
     <version>7.0.0-SNAPSHOT</version>
   </parent>
@@ -19,7 +19,7 @@
       <artifactId>activiti-api-model-shared</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.activiti.api</groupId>
+      <groupId>org.activiti</groupId>
       <artifactId>activiti-api-model-shared-impl</artifactId>
     </dependency>
     <dependency>
