--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,11 @@
       <artifactId>activiti-parent</artifactId>
       <version>7.0.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>org.activiti</groupId>
+      <artifactId>activiti-build</artifactId>
+      <version>7.0.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
   <scm>
     <url>https://github.com/Activiti/Activiti</url>
