--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-parent</artifactId>
-    <version>7.0.6</version>
+    <version>7.0.0-SNAPSHOT</version>
 <!--    <version>7.0.0-SNAPSHOT</version>
     <relativePath/>-->
   </parent>
@@ -17,6 +17,7 @@
   <url>http://activiti.org</url>
   <properties>
     <activiti.version>${project.version}</activiti.version>
+    <activiti-api.version>7.0.0-SNAPSHOT</activiti-api.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -24,7 +25,7 @@
       <dependency>
         <groupId>org.activiti.api</groupId>
         <artifactId>activiti-api-dependencies</artifactId>
-        <version>7.0.6</version>
+        <version>7.0.0-SNAPSHOT</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -146,18 +147,6 @@
     <module>activiti-spring-security-policies</module>
     <module>activiti-spring-boot-starter</module>
   </modules>
-  <dependencies>
-    <dependency>
-      <groupId>org.activiti</groupId>
-      <artifactId>activiti-parent</artifactId>
-      <version>7.0.5</version>
-    </dependency>
-    <dependency>
-      <groupId>org.activiti</groupId>
-      <artifactId>activiti-build</artifactId>
-      <version>7.0.5</version>
-    </dependency>
-  </dependencies>
   <scm>
     <url>https://github.com/Activiti/Activiti</url>
     <connection>scm:git:https://github.com/Activiti/Activiti.git</connection>
