--- a/activiti-core-dependencies/pom.xml
+++ b/activiti-core-dependencies/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>activiti-root</artifactId>
     <version>7.0.0-SNAPSHOT</version>
   </parent>
-  <artifactId>activiti-dependencies</artifactId>
+  <artifactId>activiti-core-dependencies</artifactId>
   <packaging>pom</packaging>
   <name>Activiti :: Dependencies BOM (Bill Of Materials)</name>
   <dependencyManagement>
