--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.activiti</groupId>
+    <groupId>org.activiti.build</groupId>
     <artifactId>activiti-parent</artifactId>
     <version>7.0.0-SNAPSHOT</version>
 <!--    <version>7.0.0-SNAPSHOT</version>
     <relativePath/>-->
   </parent>
+  <groupId>org.activiti</groupId>
   <artifactId>activiti-root</artifactId>
   <packaging>pom</packaging>
   <name>Activiti</name>
@@ -22,6 +23,7 @@
   <dependencyManagement>
     <dependencies>
       <!-- Activiti Modules for managed dependencies -->
+      <!-- This duplicates activiti-dependencies module but we can't import that module here as this is its parent-->
       <dependency>
         <groupId>org.activiti.api</groupId>
         <artifactId>activiti-api-dependencies</artifactId>
@@ -132,7 +134,7 @@
     </dependencies>
   </dependencyManagement>
   <modules>
-    <module>activiti-dependencies</module>
+    <module>activiti-core-dependencies</module>
     <module>activiti-api-impl</module>
     <module>activiti-bpmn-model</module>
     <module>activiti-bpmn-layout</module>
