fixed a test and the pom version not to be hardcoded

--- a/activiti-spring-connector/pom.xml
+++ b/activiti-spring-connector/pom.xml
@@ -15,7 +15,7 @@
     <dependency>
       <groupId>org.activiti</groupId>
       <artifactId>activiti-connector-model</artifactId>
-      <version>7.0.0-SNAPSHOT</version>
+      <version>${version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
