--- a/activiti-connector-model/pom.xml
+++ b/activiti-connector-model/pom.xml
@@ -2,14 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>activiti-root</artifactId>
     <groupId>org.activiti</groupId>
     <version>7.0.0-SNAPSHOT</version>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
-
   <artifactId>activiti-connector-model</artifactId>
-
-
+  <name>Activiti :: Connector model</name>
 </project>
