--- a/activiti-api-impl/activiti-api-process-runtime-impl/pom.xml
+++ b/activiti-api-impl/activiti-api-process-runtime-impl/pom.xml
@@ -16,6 +16,11 @@
     </dependency>
     <dependency>
       <groupId>org.activiti</groupId>
+      <artifactId>activiti-connector-model</artifactId>
+      <version>7.0.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.activiti</groupId>
       <artifactId>activiti-spring</artifactId>
     </dependency>
     <dependency>
