--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.activiti</groupId>
-  <artifactId>activiti-build</artifactId>
+  <groupId>org.activiti.build</groupId>
+  <artifactId>activiti-parent</artifactId>
   <version>7.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>Activiti :: Build</name>
+  <name>Activiti :: Parent</name>
   <description>${project.name}</description>
   <url>http://activiti.org</url>
   <inceptionYear>2010</inceptionYear>
@@ -44,10 +44,7 @@
     </developer>
   </developers>
   <modules>
-    <module>activiti-api-dependencies</module>
     <module>activiti-dependency-check</module>
-    <module>activiti-dependencies</module>
-    <module>activiti-parent</module>
   </modules>
   <scm>
     <url>http://github.com/Activiti/${project.artifactId}</url>
@@ -62,7 +59,7 @@
     <system>Travis</system>
     <url>https://travis-ci.org/Activiti/${project.artifactId}</url>
   </ciManagement>
-  <distributionManagement>
+<!--  <distributionManagement>
     <repository>
       <id>central-releases-staging</id>
       <name>Central Releases - Staging</name>
@@ -73,42 +70,10 @@
       <name>Activiti Snapshots</name>
       <url>https://artifacts.alfresco.com/nexus/content/repositories/activiti-snapshots/</url>
     </snapshotRepository>
-  </distributionManagement>
+  </distributionManagement>-->
   <properties>
-    <!-- configuration properties -->
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <java.version>1.8</java.version>
-    <enforcer.failOnDuplicatedClasses>true</enforcer.failOnDuplicatedClasses>
-    <!-- configuration properties for tests-->
-    <generated-assertions-folder>${project.build.directory}/generated-test-sources/assertions</generated-assertions-folder>
-    <generated-assertions-package>org.activiti.test</generated-assertions-package>
-    <!-- JVM params for test execution -->
-    <argLine>-Duser.language=en</argLine>
-    <!-- dependency -->
-    <activiti.version>7.0.0-SNAPSHOT</activiti.version>
-    <activiti-api.version>${activiti.version}</activiti-api.version>
-    <asm.version>6.1.1</asm.version>
-    <batik.version>1.10</batik.version>
-    <commons-email.version>1.5</commons-email.version>
-    <commons-fileupload.version>1.3.3</commons-fileupload.version>
-    <commons-io.version>2.6</commons-io.version>
-    <el-api.version>2.2</el-api.version>
-    <geronimo.version>1.1.1</geronimo.version>
-    <java-uuid-generator.version>3.1.4</java-uuid-generator.version>
-    <javaGeom.version>0.11.1</javaGeom.version>
-    <javax.enterprise.concurrent-api.version>1.0</javax.enterprise.concurrent-api.version>
-    <jaxb-api.version>2.2.11</jaxb-api.version>
-    <jgraphx.version>v3.9.3</jgraphx.version>
-    <json-unit.version>1.24.0</json-unit.version>
-    <jsr250-api.version>1.0</jsr250-api.version>
-    <juel.version>2.2.7</juel.version>
-    <hibernate-jpa-2.1-api.version>1.0.2.Final</hibernate-jpa-2.1-api.version>
-    <mybatis.version>3.4.2</mybatis.version>
-    <spring-boot.version>2.0.4.RELEASE</spring-boot.version>
-    <subethasmtp-wiser.version>1.2</subethasmtp-wiser.version>
-    <xmlgraphics-commons.version>2.2</xmlgraphics-commons.version>
     <!-- plugins -->
+    <asm.version>6.1.1</asm.version>
     <assertj-assertions-generator-maven-plugin.version>2.0.0</assertj-assertions-generator-maven-plugin.version>
     <build-helper-maven-plugin.version>3.0.0</build-helper-maven-plugin.version>
     <dependency-check-maven.version>3.1.2</dependency-check-maven.version>
@@ -134,6 +99,37 @@
     <maven-site-plugin.version>3.6</maven-site-plugin.version>
     <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
     <maven-surefire-plugin.version>2.20.1</maven-surefire-plugin.version>
+
+    <!-- configuration properties -->
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <java.version>1.8</java.version>
+    <enforcer.failOnDuplicatedClasses>true</enforcer.failOnDuplicatedClasses>
+    <!-- configuration properties for tests-->
+    <generated-assertions-folder>${project.build.directory}/generated-test-sources/assertions</generated-assertions-folder>
+    <generated-assertions-package>org.activiti.test</generated-assertions-package>
+    <!-- JVM params for test execution -->
+    <argLine>-Duser.language=en</argLine>
+    <!-- dependency -->
+    <batik.version>1.10</batik.version>
+    <commons-email.version>1.5</commons-email.version>
+    <commons-fileupload.version>1.3.3</commons-fileupload.version>
+    <commons-io.version>2.6</commons-io.version>
+    <el-api.version>2.2</el-api.version>
+    <geronimo.version>1.1.1</geronimo.version>
+    <java-uuid-generator.version>3.1.4</java-uuid-generator.version>
+    <javaGeom.version>0.11.1</javaGeom.version>
+    <javax.enterprise.concurrent-api.version>1.0</javax.enterprise.concurrent-api.version>
+    <jaxb-api.version>2.2.11</jaxb-api.version>
+    <jgraphx.version>v3.9.3</jgraphx.version>
+    <json-unit.version>1.24.0</json-unit.version>
+    <jsr250-api.version>1.0</jsr250-api.version>
+    <juel.version>2.2.7</juel.version>
+    <hibernate-jpa-2.1-api.version>1.0.2.Final</hibernate-jpa-2.1-api.version>
+    <mybatis.version>3.4.2</mybatis.version>
+    <spring-boot.version>2.0.4.RELEASE</spring-boot.version>
+    <subethasmtp-wiser.version>1.2</subethasmtp-wiser.version>
+    <xmlgraphics-commons.version>2.2</xmlgraphics-commons.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -299,23 +295,6 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-  <repositories>
-    <repository>
-      <id>jboss-thirdparty-releases</id>
-      <name>JBOSS Maven Repository</name>
-      <url>https://repository.jboss.org/nexus/content/repositories/thirdparty-releases/</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>jitpack.io</id>
-      <url>https://jitpack.io</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
   <build>
     <pluginManagement>
       <plugins>
@@ -807,6 +786,41 @@
             </plugin>
           </plugins>
         </pluginManagement>
+      </build>
+    </profile>
+    <!-- profile to check dependencies for vulnerabilities -->
+    <profile>
+      <id>dependency-check</id>
+      <dependencies>
+        <dependency>
+          <groupId>org.activiti</groupId>
+          <artifactId>activiti-dependency-check</artifactId>
+          <version>${project.version}</version>
+          <type>xml</type>
+          <classifier>suppression</classifier>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.owasp</groupId>
+            <artifactId>dependency-check-maven</artifactId>
+            <version>${dependency-check-maven.version}</version>
+            <configuration>
+              <failBuildOnCVSS>7</failBuildOnCVSS>
+              <suppressionFiles>
+                <suppressionFile>${settings.localRepository}/org/activiti/build/activiti-dependency-check/${project.version}/activiti-dependency-check-${project.version}-suppression.xml</suppressionFile>
+              </suppressionFiles>
+            </configuration>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>check</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
       </build>
     </profile>
   </profiles>
