--- a/pom.xml
+++ b/pom.xml
@@ -343,4 +343,13 @@
     <system>Travis</system>
     <url>https://travis-ci.org/Activiti/Activiti</url>
   </ciManagement>
-</project>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>2.8.2</version></plugin>
+    </plugins>
+    </build>
+  </project>
