--- a/pom.xml
+++ b/pom.xml
@@ -75,4 +75,13 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-</project>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>2.8.2</version></plugin>
+    </plugins>
+    </build>
+  </project>
