--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
       <dependency>
         <groupId>org.activiti</groupId>
         <artifactId>activiti-core-dependencies</artifactId>
-        <version>7.0.0-SNAPSHOT</version>
+        <version>7.0.2</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
