cloud-build needs to be included in updates

--- a/.updatebot.yml
+++ b/.updatebot.yml
@@ -3,3 +3,6 @@ github:
   - name: activiti
     repositories:
     - name: activiti-dependencies
+      branch: develop
+    - name: activiti-cloud-build
+      branch: develop
