--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
     <java.version>1.8</java.version>
     <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
     <activiti-api.version>${project.version}</activiti-api.version>
+    <activiti-build.version>7.0.23</activiti-build.version>
   </properties>
   <build>
     <plugins>
