--- a/.updatebot.yml
+++ b/.updatebot.yml
@@ -2,5 +2,7 @@ github:
   organisations:
   - name: activiti
     repositories:
+    - name: activiti-cloud-build
+      branch: develop
     - name: activiti-examples
       branch: develop
