adding right scope for bom import

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
         <groupId>org.activiti.build</groupId>
         <artifactId>activiti-dependencies-parent</artifactId>
         <version>${activiti-build.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>org.activiti.api</groupId>
